export class Promocion {
}
