export class Boleto {
}
