export class Compra {
}
