export enum TipoAsiento {
}
